feat: Add new conversion module for mapping dex models to Java bytecode